# ModernChessUI

./: .gitignore  Board.cpp  Board.h  Board.qml  BoardFactory.cpp  BoardFactory.h  CMakeLists.txt  Main.qml  SquareModel.cpp  SquareModel.h  main.cpp
ModernChessLib/: CMakeLists.txt
ModernChessLib/include/ModernChess/: AttackQueries.h  BasicParser.h  BishopAttacks.h  BitBoardConstants.h  BitBoardOperations.h  Board.h  CastlingRights.h  Color.h  Evaluation.h  FenParsing.h  Figure.h  FlatMap.h  GameState.h  GlobalConstants.h  KingAttacks.h  KnightAttacks.h  MemoryAllocator.h  Move.h  MoveExecution.h  OneStepMoves.h  PawnAttacks.h  PawnPushes.h  PawnQueries.h  PeriodicTask.h  Player.h  PrincipalVariationTable.h  PseudoMoveGeneration.h  PseudoRandomGenerator.h  QueenAttacks.h  RookAttacks.h  Square.h  TUI.h  Timer.h  TranspositionTable.h  UCICommunication.h  UCIParser.h  Utilities.h  WaitCondition.h  ZobristHasher.h
ModernChessLib/src/: AttackQueries.cpp  BasicParser.cpp  BishopAttacks.cpp  Board.cpp  CMakeLists.txt  CastlingRights.cpp  Evaluation.cpp  FenParsing.cpp  GameState.cpp  MemoryAllocator.cpp  Move.cpp  PawnAttacks.cpp  Player.cpp  RookAttacks.cpp  TUI.cpp  TranspositionTable.cpp  UCICommunication.cpp  UCIParser.cpp  Utilities.cpp  ZobristHasher.cpp
